Bug 1473840: fixed Teredo IPv6 prefix detection. r=mjf

MozReview-Commit-ID: 6dRsirith0O